--- a/app/views/customer/services/new.html.erb
+++ b/app/views/customer/services/new.html.erb
@@ -8,6 +8,11 @@
 <script type="text/javascript" charset="utf-8">
 
     $(document).ready(function(){
+
+        $('.membership_blog').hide();
+        $('.commercial_space_blog').hide();
+        $('.for_other').hide();
+
         if($('#service_subcategory_id').val() == ""){
             $('#service_subcategory_id').prop('disabled', true);
         }
@@ -17,6 +22,8 @@
 
         var category_name =  $("#service_category_id").find(":selected").text();
         var category_val =  $("#service_category_id").find(":selected").val();
+        var subcategory_name =  $("#service_category_id").find(":selected").text();
+        var subcategory_val =  $("#service_subcategory_id").find(":selected").val();
         if (category_name == 'Membership' || category_name == 'Commercial Space' ){
             $.get("/get_subcategories/"+ category_val +".json?subcategory_type="+category_name+"", function(data, status){
                 var appendString = '<option value="">Select subcategory</option>';
@@ -24,16 +31,42 @@
                     appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
                 }
                 $('#service_subcategory_id').html(appendString);
+                $("#service_subcategory_id").val(subcategory_val);
             });
             len = $("#service_category_id option:selected").length;
             if (len > 0 ) {
                 $('#service_subcategory_id').prop('disabled', false);
             }
+
+        }
+        else{
+            if (category_val.length > 0){
+                $.get("/get_subcategories/"+ category_val +".json?subcategory_type=service", function(data, status){
+                    var appendString = '<option value="">Select Subcategory</option>';
+                    for(var i=0; i < data.length;i++){
+                        appendString +="<option value="+data[i].id+">" + data[i].name + "</option>";
+                    }
+                    $('#service_subcategory_id').html(appendString);
+                    $("#service_subcategory_id").val(subcategory_val);
+                    $('#service_subcategory_id').prop('disabled', false);
+                });
+            }
+            else {
+                $('#service_subcategory_id').prop('disabled', false);
+            }
+
         }
 
-        $('.membership_blog').hide();
-        $('.commercial_space_blog').hide();
-        $('.for_other').hide();
+        if(category_name == 'Membership'){
+            $('.membership_blog').show();
+        }
+        if(category_name == 'Commercial Space'){
+            $('.commercial_space_blog').show();
+        }
+        if(subcategory_name == 'Others'){
+            $('.for_other').show();
+        }
+
         $("#service_subcategory_id").change(function() {
             var subcategory_name =  $(this).find(":selected").text();
             if (subcategory_name == 'Others'){
