--- a/app/views/admin/subcategories/index.html.erb
+++ b/app/views/admin/subcategories/index.html.erb
@@ -15,6 +15,7 @@
       <tr class="info">
         <th>Name</th>
         <th>Category</th>
+        <th>Type</th>
         <th>Action</th>
       </tr>
       </thead>
@@ -22,6 +23,7 @@
           <tr>
             <td><%= subcategory.name %></td>
             <td><%= subcategory.category.name if subcategory.category.present? %></td>
+            <td><%= subcategory.subcategory_type %></td>
             <td>
               <%= link_to edit_admin_subcategory_path(subcategory) do %>
                   <i class="fa fa-edit"></i>
