subcategories page create

--- a/app/views/welcome/categories.html.erb
+++ b/app/views/welcome/categories.html.erb
@@ -11,29 +11,29 @@
         </li>
         <li class="active">Running Shoes</li>
       </ol>
-      <ul class="category-selections clearfix">
+      <!--<ul class="category-selections clearfix">-->
 
-        <li><span class="category-selections-sign">Sort by :</span>
-          <select class="category-selections-select">
-            <option selected>Newest First</option>
-            <option>Best Sellers</option>
-            <option>Trending Now</option>
-            <option>Best Raited</option>
-            <option>Price : Lowest First</option>
-            <option>Price : Highest First</option>
-            <option>Title : A - Z</option>
-            <option>Title : Z - A</option>
-          </select>
-        </li>
-        <li><span class="category-selections-sign">Items :</span>
-          <select class="category-selections-select">
-            <option>9 / page</option>
-            <option selected>12 / page</option>
-            <option>18 / page</option>
-            <option>All</option>
-          </select>
-        </li>
-      </ul>
+        <!--<li><span class="category-selections-sign">Sort by :</span>-->
+          <!--<select class="category-selections-select">-->
+            <!--<option selected>Newest First</option>-->
+            <!--<option>Best Sellers</option>-->
+            <!--<option>Trending Now</option>-->
+            <!--<option>Best Raited</option>-->
+            <!--<option>Price : Lowest First</option>-->
+            <!--<option>Price : Highest First</option>-->
+            <!--<option>Title : A - Z</option>-->
+            <!--<option>Title : Z - A</option>-->
+          <!--</select>-->
+        <!--</li>-->
+        <!--<li><span class="category-selections-sign">Items :</span>-->
+          <!--<select class="category-selections-select">-->
+            <!--<option>9 / page</option>-->
+            <!--<option selected>12 / page</option>-->
+            <!--<option>18 / page</option>-->
+            <!--<option>All</option>-->
+          <!--</select>-->
+        <!--</li>-->
+      <!--</ul>-->
     </div>
   </div>
 </header>
@@ -43,179 +43,179 @@
       <aside class="category-filters">
         <div class="category-filters-section">
           <h3 class="widget-title-sm">Category</h3>
-          <ul class="cateogry-filters-list">
-            <li><a href="#">Tv, Audio &amp; Home Theater</a>
-            </li>
-            <li><a href="#">Camera, Photo &amp; Video</a>
-            </li>
-            <li><a href="#">Computers &amp; Accessories</a>
-            </li>
-            <li><a href="#">Cell Phones &amp; Accessories</a>
-            </li>
-            <li><a href="#">Business &amp; Office</a>
-            </li>
-            <li><a href="#">Car &amp; GPS</a>
-            </li>
-            <li><a href="#">Audio & Accessories</a>
-            </li>
-            <li><a href="#">Software</a>
-            </li>
-            <li><a href="#">Video Games</a>
-            </li>
-          </ul>
+          <!--<ul class="cateogry-filters-list">-->
+            <!--<li><a href="#">Tv, Audio &amp; Home Theater</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Camera, Photo &amp; Video</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Computers &amp; Accessories</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Cell Phones &amp; Accessories</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Business &amp; Office</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Car &amp; GPS</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Audio & Accessories</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Software</a>-->
+            <!--</li>-->
+            <!--<li><a href="#">Video Games</a>-->
+            <!--</li>-->
+          <!--</ul>-->
         </div>
         <div class="category-filters-section">
           <h3 class="widget-title-sm">Price</h3>
           <input type="text" id="price-slider" />
         </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Relese Date</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Last 30 days<span class="category-filters-amount">(100)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Last 90 days<span class="category-filters-amount">(59)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Comming Soon<span class="category-filters-amount">(94)</span>
-            </label>
-          </div>
-        </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Brand</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Apple<span class="category-filters-amount">(10)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Samsung<span class="category-filters-amount">(15)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />LG<span class="category-filters-amount">(86)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Sony<span class="category-filters-amount">(62)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Micosoft<span class="category-filters-amount">(49)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Dell<span class="category-filters-amount">(75)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />HP<span class="category-filters-amount">(22)</span>
-            </label>
-          </div>
-        </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Carrier</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />AT&amp;T<span class="category-filters-amount">(32)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Verizon<span class="category-filters-amount">(37)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Sprint<span class="category-filters-amount">(86)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />T-Mobile<span class="category-filters-amount">(80)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Virgin Mobile<span class="category-filters-amount">(66)</span>
-            </label>
-          </div>
-        </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Operating System</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Android<span class="category-filters-amount">(41)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />iOS<span class="category-filters-amount">(18)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Windows 8<span class="category-filters-amount">(98)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />BlackberryOS<span class="category-filters-amount">(40)</span>
-            </label>
-          </div>
-        </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Discount</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />10% Off or More<span class="category-filters-amount">(99)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />25% Off or More<span class="category-filters-amount">(59)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />50% Off or More<span class="category-filters-amount">(62)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />75% Off or More<span class="category-filters-amount">(10)</span>
-            </label>
-          </div>
-        </div>
-        <div class="category-filters-section">
-          <h3 class="widget-title-sm">Features</h3>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />New<span class="category-filters-amount">(29)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />Featured<span class="category-filters-amount">(97)</span>
-            </label>
-          </div>
-          <div class="checkbox">
-            <label>
-              <input class="i-check" type="checkbox" />On Sale<span class="category-filters-amount">(99)</span>
-            </label>
-          </div>
-        </div>
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Relese Date</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Last 30 days<span class="category-filters-amount">(100)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Last 90 days<span class="category-filters-amount">(59)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Comming Soon<span class="category-filters-amount">(94)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Brand</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Apple<span class="category-filters-amount">(10)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Samsung<span class="category-filters-amount">(15)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />LG<span class="category-filters-amount">(86)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Sony<span class="category-filters-amount">(62)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Micosoft<span class="category-filters-amount">(49)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Dell<span class="category-filters-amount">(75)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />HP<span class="category-filters-amount">(22)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Carrier</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />AT&amp;T<span class="category-filters-amount">(32)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Verizon<span class="category-filters-amount">(37)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Sprint<span class="category-filters-amount">(86)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />T-Mobile<span class="category-filters-amount">(80)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Virgin Mobile<span class="category-filters-amount">(66)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Operating System</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Android<span class="category-filters-amount">(41)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />iOS<span class="category-filters-amount">(18)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Windows 8<span class="category-filters-amount">(98)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />BlackberryOS<span class="category-filters-amount">(40)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Discount</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />10% Off or More<span class="category-filters-amount">(99)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />25% Off or More<span class="category-filters-amount">(59)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />50% Off or More<span class="category-filters-amount">(62)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />75% Off or More<span class="category-filters-amount">(10)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="category-filters-section">-->
+          <!--<h3 class="widget-title-sm">Features</h3>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />New<span class="category-filters-amount">(29)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />Featured<span class="category-filters-amount">(97)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+          <!--<div class="checkbox">-->
+            <!--<label>-->
+              <!--<input class="i-check" type="checkbox" />On Sale<span class="category-filters-amount">(99)</span>-->
+            <!--</label>-->
+          <!--</div>-->
+        <!--</div>-->
       </aside>
     </div>
     <div class="col-md-9">
