--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -23,3 +23,125 @@
     }
   }
 }
+
+.content-main-section {
+  width: 100%;
+  padding: 20px 0;
+  .contact-main-form {
+    width: 100%;
+    margin: 30px 0;
+    background-color: #ffffff;
+    .field-con{
+      padding: 10px 0;
+      position: relative;
+      .label{
+        font-size: 11px;
+        position: absolute;
+        top: 3px;
+        left: 0;
+        margin-bottom: 10px;
+        color: #000000;
+        abbr{
+          border: none;
+          color: #cc0000;
+        }
+      }
+      .text-field{
+        width: 100%;
+        height: 40px;
+        border:1px solid #ccc;
+        border-radius: 0px;
+        -webkit-border-radius: 0px;
+        box-shadow: none;
+        background: #ffffff;
+        padding: 0 8px;
+        margin:15px 0;
+        -webkit-appearance:none;
+      }
+      .full-select-field{
+        width: 100%;
+        height: 40px;
+        border:1px solid #ccc;
+        border-radius: 0px;
+        -webkit-border-radius: 0px;
+        box-shadow: none;
+        background: #ffffff;
+        padding: 0 8px;
+        margin:15px 0;
+      }
+      .select-field{
+        width: 15%;
+        height: 40px;
+        border:1px solid #ccc;
+        border-radius: 0px;
+        -webkit-border-radius: 0px;
+        box-shadow: none;
+        background: #ffffff;
+        padding: 0 8px;
+        margin:15px 0;
+      }
+      .text-discription{
+        width: 100%;
+        height: 100px;
+        border:1px solid #ccc;
+        border-radius: 0px;
+        -webkit-border-radius: 0px;
+        box-shadow: none;
+        background: #ffffff;
+        padding: 0 8px;
+        margin:15px 0;
+        -webkit-appearance:none;
+      }
+      .meterial_result{
+        font-size: 20px;
+        margin-top: 22px;
+      }
+      .meterial_total{
+        color: rgba(25, 147, 54, 1);
+      }
+    }
+    .grey-color{
+      background-color: #F4F7F5;
+    }
+    .add-button{
+      font-size: 16px;
+      color: rgba(25, 147, 54, 1);
+      display: inline-block;
+      padding: 3px;
+      border-radius: 15px;
+      width: 200px;
+      margin-bottom: 20px;
+      text-align: center;
+      border:1px solid rgba(255, 245, 99, 1);
+      -webkit-transition: all 0.6s ease-in-out;
+      -moz-transition: all 0.6s ease-in-out;
+      -ms-transition: all 0.6s ease-in-out;
+      -o-transition: all 0.6s ease-in-out;
+      transition: all 0.6s ease-in-out;
+    }
+    .add-button:hover{
+      background-color: rgba(255, 245, 99, 1);
+      -webkit-transition: all 0.6s ease-in-out;
+      -moz-transition: all 0.6s ease-in-out;
+      -ms-transition: all 0.6s ease-in-out;
+      -o-transition: all 0.6s ease-in-out;
+      transition: all 0.6s ease-in-out;
+    }
+    .no-padding{
+      padding: 0;
+    }
+    .submit-main{
+      width: 100%;
+      background-color: #eee;
+      padding: 10px;
+      text-align: center;
+      .s-button{
+        width: 200px;
+        font-size: 12px;
+        font-weight: bold;
+        border:0px;
+        padding: 10px;
+      }
+    }
+  }
+}
