--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -1,21 +1,131 @@
-<%= simple_form_for [:customer, @product] do |f| %>
-    <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category' %>
-    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender'%>
-    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory' %>
-    <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :technical_specification %>
-    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
-    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city' %>
-    <%= f.input :location %>
-    <%= f.input :start_at %>
-    <%= f.input :end_at %>
-    <%= f.input :quantity %>
-    <%= f.input :rent, collection: ['Per day', 'Per week', 'Per month'], prompt: 'choose rent' %>
-    <%= f.input :price_in_rupees %>
-    <%= f.input :refundable_security %>
-    <%= f.input :cost_of_replacement %>
-    <%= f.input :youtube_link %>
-    <%= f.input :other %>
-    <%= f.submit 'Save', class: 'btn btn-primary' %>
-<% end %>
+<%#= simple_form_for [:customer, @product] do |f| %>
+    <%#= f.input :category_id, collection: product_category_collection, prompt: 'Select category' %>
+    <%#= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender' %>
+    <%#= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory' %>
+    <%#= f.input :name %>
+    <%#= f.input :description %>
+    <%#= f.input :technical_specification %>
+    <%#= f.input :state_id, collection: state_for_collection, prompt: 'Select state' %>
+    <%#= f.input :city_id, collection: city_for_collection, prompt: 'Select city' %>
+    <%#= f.input :location %>
+    <%#= f.input :start_at %>
+    <%#= f.input :end_at %>
+    <%#= f.input :quantity %>
+    <%#= f.input :rent, collection: ['Per day', 'Per week', 'Per month'], prompt: 'choose rent' %>
+    <%#= f.input :price_in_rupees %>
+    <%#= f.input :refundable_security %>
+    <%#= f.input :cost_of_replacement %>
+    <%#= f.input :youtube_link %>
+    <%#= f.input :other %>
+    <%#= f.submit 'Save', class: 'btn btn-primary' %>
+<%# end %>
+
+<div class="content-main-section">
+  <div class="container">
+    <div class="col-md-offset-1 col-sm-offset-1 col-md-10 col-sm-10 col-xs-12">
+      <h2 class="text-center">Add New Product</h2>
+      <div class="row">
+        <div class="col-md-12">
+          <div class="contact-main-form">
+            <%= simple_form_for [:customer, @product] do |f| %>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :category_id, collection: product_category_collection, prompt: 'Select category', label: 'Category' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :gender, collection: ['Male', 'Female'], prompt: 'Select gender', label: 'Gender' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :subcategory_id, collection: subcategory_for_collection, prompt: 'Select subcategory', label: 'Subcategory' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :name, label: 'Name' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :description, label: 'Description' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :technical_specification, label: 'Technical Specification' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :state_id, collection: state_for_collection, prompt: 'Select state', label: 'State' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :city_id, collection: city_for_collection, prompt: 'Select city', label: 'City' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :location, label: 'Location' ,label_html: {class: 'label'}, input_html: {class: 'full-select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :start_at, label: 'Start at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :end_at, label: 'End at' ,label_html: {class: 'label'}, input_html: {class: 'select-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :quantity, label: 'Quantity' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :rent, label: 'Rent' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :price_in_rupees, label: 'Price in Rupees' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :refundable_security, label: 'Refundable Security' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :cost_of_replacement, label: 'Cost of Replacement' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :youtube_link, label: 'Youtube Link' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
+                    <%= f.input :other, label: 'Other' ,label_html: {class: 'label'}, input_html: {class: 'text-discription'} %>
+                  </div>
+                </div>
+                <div class="clearfix"></div>
+                <div class="submit-main">
+                  <%= f.submit 'Save', class: 'pushbutton-wide s-button btn btn-primary' %>
+                </div>
+            <% end %>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
