--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -22,29 +22,24 @@
     </div>
   </div>
   <div class="mfp-with-anim mfp-hide mfp-dialog clearfix" id="nav-login-dialog">
-    <h3 class="widget-title">Member Login</h3>
-    <p>Welcome back, friend. Login to get started</p>
+    <h3 class="widget-title">Login</h3>
+    <p>Welcome, Login to get started</p>
     <hr />
-    <form>
-      <div class="form-group">
-        <label>Email or Username</label>
-        <input class="form-control" type="text" />
-      </div>
-      <div class="form-group">
-        <label>Password</label>
-        <input class="form-control" type="text" />
-      </div>
-      <div class="checkbox">
-        <label>
-          <input class="i-check" type="checkbox" />Remeber Me</label>
-      </div>
-      <input class="btn btn-primary" type="submit" value="Sign In" />
-    </form>
+    <%= form_tag customer_sign_in_path do %>
+        <div class="form-group">
+          <%= label_tag :email %>
+          <%= email_field_tag :email, params[:email], class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= label_tag :password %>
+          <%= password_field_tag :password, '',class: 'form-control' %>
+        </div>
+        <%= submit_tag 'Sign In', class: 'btn btn-primary' %>
+    <%- end %>
     <div class="gap gap-small"></div>
     <ul class="list-inline">
-      <li><a href="#nav-account-dialog" class="popup-text">Register Here</a>
-      </li>
-      <li><a href="#nav-pwd-dialog" class="popup-text">Forgot Password?</a>
+      <li>
+        <%= link_to 'Register Here', customer_registration_path, class: 'popup-text' %>
       </li>
     </ul>
   </div>
