--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -6,19 +6,19 @@
         <p>Per nec integer bibendum montes malesuada libero nam libero nostra nec gravida</p>
         <ul class="main-footer-social-list">
           <li>
-            <a class="fa fa-facebook" href="#"></a>
+            <a class="fa fa-facebook" href="https://www.facebook.com/MySolutions4u-1156251417739141/"></a>
           </li>
           <li>
-            <a class="fa fa-twitter" href="#"></a>
+            <a class="fa fa-twitter" href="https://twitter.com/vasudevkaushik9"></a>
           </li>
           <li>
-            <a class="fa fa-pinterest" href="#"></a>
+            <a class="fa fa-pinterest" href="https://www.linkedin.com/today/posts/mohit-sikka+0_2YoSWVv2pcQ97ovRJZihaX"></a>
           </li>
           <li>
-            <a class="fa fa-instagram" href="#"></a>
+            <a class="fa fa-instagram" href="http://yooying.com/sikk_moh"></a>
           </li>
           <li>
-            <a class="fa fa-google-plus" href="#"></a>
+            <a class="fa fa-google-plus" href="https://plus.google.com/105215932820925656620/posts"></a>
           </li>
         </ul>
       </div>
