--- a/app/views/customer/products/_form.html.erb
+++ b/app/views/customer/products/_form.html.erb
@@ -100,6 +100,11 @@
                 </div>
                 <div class="col-xs-12">
                   <div class="field-con">
+                    <%= f.input :negotiable %>
+                  </div>
+                </div>
+                <div class="col-xs-12">
+                  <div class="field-con">
                     <%= f.input :refundable_security, label: 'Refundable Security' ,label_html: {class: 'label'}, input_html: {class: 'text-field'} %>
                   </div>
                 </div>
