header footer ui

--- a/app/views/welcome/shared/_footer.html.erb
+++ b/app/views/welcome/shared/_footer.html.erb
@@ -3,7 +3,13 @@
     <div class="row row-col-gap" data-gutter="60">
       <div class="col-sm-4 col-xs-12">
         <h4 class="widget-title-sm">ByeBuying</h4>
-        <p>Per nec integer bibendum montes malesuada libero nam libero nostra nec gravida</p>
+        <p>Shop no. 31, New Sabzi Mandi, Sector 16, Faridabad</p>
+      </div>
+      <div class="col-sm-4 col-xs-12">
+
+      </div>
+      <div class="col-sm-4 col-xs-12">
+        <h4 class="widget-title-sm">Connect with us</h4>
         <ul class="main-footer-social-list">
           <li>
             <a class="fa fa-facebook" href="https://www.facebook.com/MySolutions4u-1156251417739141/"></a>
@@ -22,52 +28,7 @@
           </li>
         </ul>
       </div>
-      <div class="col-sm-4 col-xs-12">
-        <h4 class="widget-title-sm">Popular Tags</h4>
-        <ul class="main-footer-tag-list">
-          <li><a href="#">New Season</a>
-          </li>
-          <li><a href="#">Watches</a>
-          </li>
-          <li><a href="#">woman</a>
-          </li>
-          <li><a href="#">classic</a>
-          </li>
-          <li><a href="#">modern</a>
-          </li>
-          <li><a href="#">blue</a>
-          </li>
-          <li><a href="#">shoes</a>
-          </li>
-          <li><a href="#">running</a>
-          </li>
-          <li><a href="#">jeans</a>
-          </li>
-          <li><a href="#">sports</a>
-          </li>
-          <li><a href="#">laptops</a>
-          </li>
-        </ul>
-      </div>
-      <div class="col-sm-4 col-xs-12">
-        <h4 class="widget-title-sm">Newsletter</h4>
-        <form>
-          <div class="form-group">
-            <label>Sign up to the newsletter</label>
-            <input class="newsletter-input form-control" placeholder="Your e-mail address" type="text" />
-          </div>
-          <input class="btn btn-primary" type="submit" value="Sign up" />
-        </form>
-      </div>
     </div>
-    <ul class="main-footer-links-list">
-      <li><a href="/about_us">About Us</a></li>
-      <li><a href="/blog">Blog</a></li>
-      <li><a href="/contact_us">Contact Us</a></li>
-      <li><a href="#">FAQ</a></li>
-      <li><a href="#">Wishlist</a></li>
-      <li><a href="#">Help</a></li>
-    </ul>
   </div>
 </footer>
 <div class="copyright-area">
