--- a/app/views/customer/shared/_header.html.erb
+++ b/app/views/customer/shared/_header.html.erb
@@ -536,7 +536,7 @@
 
         <form class="navbar-form navbar-left navbar-main-search" role="search">
           <div class="form-group">
-            <input class="form-control" type="text" placeholder="Search the Entire Store..." />
+            <input class="form-control" type="text" placeholder="Search..." />
           </div>
           <a class="fa fa-search navbar-main-search-submit" href="#"></a>
         </form>
