--- a/app/views/welcome/shared/_header.html.erb
+++ b/app/views/welcome/shared/_header.html.erb
@@ -141,19 +141,31 @@
 
         <form class="navbar-form navbar-left navbar-main-search" role="search">
           <div class="form-group">
-            <input class="form-control" type="text" placeholder="Search the Entire Store..." />
+            <input class="form-control" type="text" placeholder="Search..." />
           </div>
           <a class="fa fa-search navbar-main-search-submit" href="#"></a>
         </form>
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>
-            <ul class="dropdown-menu dropdown-menu-shipping-cart">
-              <li>
-                <a href="#nav-login-dialog" class="popup-text">Login</a>
+          <% if user_signed_in? %>
+              <li class="dropdown"><a href="Javascript:void(0)"><%= current_user.email %></a>
+                <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                  <li><%= link_to 'Dashboard', customer_dashboard_path %></li>
+                  <li><%= link_to 'Advertisements', customer_advertisements_path %></li>
+                  <li><%= link_to 'Products', customer_products_path %></li>
+                  <li><%= link_to 'Services', customer_services_path %></li>
+                </ul>
               </li>
-            </ul>
-          </li>
+              <li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+          <% else %>
+              <li class="dropdown">
+                <a href="#nav-account-dialog" data-effect="mfp-move-from-top" class="popup-text">Start</a>
+                <ul class="dropdown-menu dropdown-menu-shipping-cart">
+                  <li>
+                    <a href="#nav-login-dialog" class="popup-text">Login</a>
+                  </li>
+                </ul>
+              </li>
+          <%- end %>
         </ul>
       </div>
     </div>
