--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-sm-4 col-sm-offset-4">
+    <h2>Enquiry for <%= @product.name %></h2>
     <%= render partial: 'form' %>
   </div>
 </div>
